adding casper. exclude files when grunt tasks are left out

--- a/root/test/.jshintrc
+++ b/root/test/.jshintrc
@@ -10,5 +10,23 @@
   "unused": false,
   "boss": true,
   "eqnull": true,
-  "node": true
+  "node": true,
+  "predef": [
+    "$",
+    "jQuery",
+    "define",
+    "require",
+    "casper",
+    "jasmine",
+    "module",
+    "exports",
+    "it",
+    "beforeEach",
+    "afterEach",
+    "describe",
+    "jasmine",
+    "expect",
+    "spyOn",
+    "phantom"
+  ]
 }
